--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -2,10 +2,23 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hello Glimmer</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
+    <title> Plastic Knives </title>
+
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="description" content="Plastic Knives band website">
+    <meta name="msapplication-tap-highlight" content="no" />
+
+    <meta property="og:title" content="Plastic Knives">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://plasticknives.band/">
+    <meta property="og:image" content="http://plasticknives.band/images/cover.png" />
+    <meta property="og:site_name" content="Plastic Knives">
+    <meta property="og:description" content="Plastic Knives band website">
+
+    <link href='//fonts.googleapis.com/css?family=Source+Sans+Pro:300,400' rel='stylesheet' type='text/css'>
 
     {{content-for "head"}}
 
@@ -16,9 +29,25 @@
   <body>
     {{content-for "body"}}
 
-    <div id="app"></div>
     <script src="{{rootURL}}app.js"></script>
 
     {{content-for "body-footer"}}
+
+    <!-- <script>
+      (function(i, s, o, g, r, a, m) {
+        i.GoogleAnalyticsObject = r;
+        i[r] = i[r] || function() {
+          (i[r].q = i[r].q || []).push(arguments);
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+      })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+      window.ga('create', 'UA-24420216-2', 'auto');
+      window.ga('send', 'pageview');
+    </script> -->
   </body>
 </html>
